add badge preview

--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-slot": "^1.2.3",
+    "@react-aria/interactions": "^3.25.1",
+    "@react-aria/utils": "^3.29.0",
+    "@react-pdf/renderer": "^4.3.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
