--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "convertData": "node convert.js"
+    "convert": "node convert.js"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.14",
