--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "convert-csv-to-json": "^3.4.0",
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
+    "pdf-to-printer": "^5.6.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.3.0"
