--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,6 @@
   "dependencies": {
     "express": "^5.1.0",
     "pdf-to-printer": "^5.6.0",
-    "pdfkit": "^0.17.1",
-    "sleep": "^6.3.0"
+    "pdfkit": "^0.17.1"
   }
 }
