--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "express": "^5.1.0",
     "pdf-to-printer": "^5.6.0",
-    "pdfkit": "^0.17.1"
+    "pdfkit": "^0.17.1",
+    "qrcode": "^1.5.4"
   }
 }
