--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "nodemon": "^3.1.10",
     "pdf-to-printer": "^5.6.0",
     "pdfkit": "^0.17.1",
     "qrcode": "^1.5.4"
